# wino

./: .gitignore  CMakeLists.txt  LICENSE  build.zig  build.zig.zon
example/: CMakeLists.txt  wayland-protocol-learn.c
examples/: main.zig
include/wino/: posix_shm.h  wino.h
src/: CMakeLists.txt  EventLoop.zig  Window.zig  config.h.in  enums.c  math.zig  posix_shm.c  wayland.c  wino.c  wino.zig
src/EventLoop/: Event.zig
src/platform/linux/: LinuxWindow.zig
src/platform/windows/: WindowsWindow.zig
